chore: deps/security

--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -70,10 +70,9 @@ body {
       .page__share {
           position: relative;
           float: left;
-          margin-left: 4em;
-          margin-right: 0;
+          margin-left: 1em;
+          margin-right: 1em;
           margin-bottom: 2em;
-          width: 100%;
           clear: both;
       }
 
