--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -3,12 +3,12 @@
     {% if script contains "://" %}
       {% capture script_path %}{{ script }}{% endcapture %}
     {% else %}
-      {% capture script_path %}{{ script | relative_url }}{% endcapture %}
+      {% capture script_path %}{{ script | url }}{% endcapture %}
     {% endif %}
     <script defer src="{{ script_path }}"></script>
   {% endfor %}
 {% else %}
-  <!-- <script defer src="{{ '/assets/js/main.min.js' | relative_url }}"></script> -->
+  <!-- <script defer src="{{ '/assets/js/main.min.js' | url }}"></script> -->
 {% endif %}
 
 {% if site.search == true or page.layout == "search" %}
@@ -30,7 +30,7 @@
     {% if script contains "://" %}
       {% capture script_path %}{{ script }}{% endcapture %}
     {% else %}
-      {% capture script_path %}{{ script | relative_url }}{% endcapture %}
+      {% capture script_path %}{{ script | url }}{% endcapture %}
     {% endif %}
     <script defer src="{{ script_path }}"></script>
   {% endfor %}
