--- a/src/_includes/sidebar.html
+++ b/src/_includes/sidebar.html
@@ -6,12 +6,12 @@
         {% if s.image contains "://" %}
           "{{ s.image }}"
         {% else %}
-          "{{ s.image | relative_url }}"
+          "{{ s.image | url }}"
         {% endif %}
         alt="{% if s.image_alt %}{{ s.image_alt }}{% endif %}">
       {% endif %}
       {% if s.title %}<h3>{{ s.title }}</h3>{% endif %}
-      {% if s.text %}{{ s.text | markdownify }}{% endif %}
+      {% if s.text %}{{ s.text  }}{% endif %}
 
       {% if s.nav %}{% include nav_list, nav: s["nav"] %}{% endif %}
     {% endfor %}
