--- a/src/_sass/imports/utilities.scss
+++ b/src/_sass/imports/utilities.scss
@@ -177,6 +177,13 @@
     height: 1em;
 }
 
+.icon1quarterem {
+  width: 1.25em;
+  height: 1.25em;
+  vertical-align: -0.1em;
+}
+
+
 .bg-alternate {
     background: #f1f1f1 !important;
 }
