--- a/src/_sass/imports/minimal-mistakes/_reset.scss
+++ b/src/_sass/imports/minimal-mistakes/_reset.scss
@@ -79,7 +79,9 @@ audio:not([controls]) {
 }
 
 a {
-    color: $link-color;
+  color: var(--link-color);
+  text-decoration-color: var(--primary-color-light);
+
 }
 
 /* Apply focus state */
