--- a/src/_sass/imports/minimal-mistakes/_utilities.scss
+++ b/src/_sass/imports/minimal-mistakes/_utilities.scss
@@ -208,7 +208,7 @@ body:hover .visually-hidden button {
   .fab,
   .far,
   .fal {
-    color: $text-color;
+    color: var(--text-color);
   }
 
   .fa-behance,
