--- a/src/_sass/imports/cards.scss
+++ b/src/_sass/imports/cards.scss
@@ -66,7 +66,7 @@
 }
 
 .card h2 {
-  color: $text-color;
+  color: var(--text-color);
   font: 700 56px/50px $display-font;
   margin: 0;
   padding: 0;
@@ -89,7 +89,7 @@
 }
 
 .card h3 {
-  color: $text-color;
+  color: var(--text-color);
   font: 700 36px/40px $display-font;
   margin: 0;
   padding: 0;
@@ -110,7 +110,7 @@
     flex-flow: column;
     border: none;
     background: transparent;
-    color: $text-color;
+    color: var(--text-color);
   }
   & .card h2 {
       font: 700 24px/24px $display-font;
