--- a/src/_sass/imports/minimal-mistakes/_forms.scss
+++ b/src/_sass/imports/minimal-mistakes/_forms.scss
@@ -18,7 +18,7 @@ form {
     width: 100%;
     margin-bottom: 5px * 2;
     padding: 0;
-    color: $text-color;
+    color: var(--text-color);
     border: 0;
     white-space: normal;
   }
@@ -57,7 +57,7 @@ textarea {
 label {
   display: block;
   margin-bottom: 0.25em;
-  color: $text-color;
+  color: var(--text-color);
   cursor: pointer;
 
   small {
@@ -78,7 +78,7 @@ select {
   width: 100%;
   padding: 0.25em;
   margin-bottom: 0.5em;
-  color: $text-color;
+  color: var(--text-color);
   background-color: $background-color;
   border: $border-color;
   border-radius: $border-radius;
@@ -217,7 +217,7 @@ textarea:focus {
   border-color: $primary-color;
   outline: 0;
   outline: thin dotted \9;
-  box-shadow: inset 0 1px 3px rgba($text-color, 0.06),
+  box-shadow: inset 0 1px 3px rgba(var(--text-color), 0.06),
     0 0 5px rgba($primary-color, 0.7);
 }
 
