--- a/src/_sass/sdk-documentation-layout.scss
+++ b/src/_sass/sdk-documentation-layout.scss
@@ -87,27 +87,27 @@ $code-font-size: 1rem;
 // $gray-800: rgb(227, 227, 227);
 // $gray-900: rgb(255, 255, 255);
 
-@if ($theme == 'dark') {
-    $background-color: #252a34 !default !global;
-    $text-color: #eaeaea !default !global;
-    $border-color: mix(#000, $background-color, 20%) !default !global;
-    $card-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23) !default !global;
-} @else {
-    $background-color: #fff !default !global;
-    $text-color: #223 !default !global;
-    $border-color: mix(#fff, $text-color, 85%) !default !global;
-    $card-background-color: #fafafa !default !global;
-    $card-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23) !default !global;
-}
+// @if ($theme == 'dark') {
+//     $background-color: #252a34 !default !global;
+//     $text-color: #eaeaea !default !global;
+//     $border-color: mix(#000, $background-color, 20%) !default !global;
+//     $card-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23) !default !global;
+// } @else {
+//     $background-color: #fff !default !global;
+//     $text-color: #223 !default !global;
+//     $border-color: mix(#fff, $text-color, 85%) !default !global;
+//     $card-background-color: #fafafa !default !global;
+//     $card-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23) !default !global;
+// }
 
 mark {
-    background: hsla(49, 100%, 63%, 0.56); // hsla(58, 100%, 50%, 0.56);
+    background: var(--highlight-color);
 }
 
 section.page__content {
     font-family: $body-font;
     line-height: 1.5;
-    color: $text-color;
+    color: var(--text-color);
 }
 
 section.page__content h1,
@@ -147,7 +147,7 @@ section.page__content h5 {
 }
 
 .search-box-container .icon {
-    color: #9aa0a6;
+    color: var(--placeholder-color);
     width: 32px;
     min-width: 32px;
     height: 32px;
@@ -174,7 +174,7 @@ section.page__content h5 {
     outline: none;
 }
 #search-box::placeholder {
-    color: #9aa0a6;
+    color: var(--placeholder-color);
 }
 
 #search-result-none {
@@ -203,7 +203,7 @@ section.page__content h5 {
 
 // For the "main" symbol in the heading
 h2 strong {
-    color: $primary-color;
+    color: var(--primary-color);
     font-weight: 700;
 }
 
@@ -216,7 +216,7 @@ h3 {
     line-height: 1.5;
     border: 10px solid $background-color;
     border-bottom: 1px solid #e7e7e7;
-    color: $text-color;
+    color: var(--text-color);
     z-index: 6; // For sticky header to float above
     background: $background-color;
     transform: translateX(-10px);
@@ -292,7 +292,7 @@ strong var {
     border-radius: 4px;
     border: 1px solid $border-color;
     // background-color: $card-background-color;
-    color: $text-color;
+    color: var(--text-color);
     max-width: 820px;
     // box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
@@ -324,7 +324,7 @@ section.page__content .card h3 {
 
     white-space: nowrap;
 
-    color: $text-color;
+    color: var(--text-color);
     background-color: $card-background-color;
     // letter-spacing: .25px;
     border: none;
@@ -335,7 +335,7 @@ section.page__content .card h3 {
 
 /* Card header name */
 .card h3 strong {
-    color: $primary-color;
+    color: var(--primary-color);
 }
 
 .card h3 > span {
@@ -382,7 +382,7 @@ ul {
 
     margin-top: 1rem;
     margin-bottom: 1rem;
-    color: $text-color;
+    color: var(--text-color);
 }
 
 html {
@@ -398,7 +398,7 @@ body.layout--sdk-documentation-layout article.page a,
 body.layout--sdk-documentation-layout article.page a:active,
 body.layout--sdk-documentation-layout article.page a:visited,
 body.layout--sdk-documentation-layout article.page a:hover {
-    color: $primary-color;
+    color: var(--primary-color);
     text-decoration: none;
 }
 
@@ -442,7 +442,7 @@ body.layout--sdk-documentation-layout article.page a:hover {
 }
 
 .page__content dt strong {
-    color: $text-color;
+    color: var(--text-color);
 }
 
 .page__content dt em {
@@ -451,7 +451,7 @@ body.layout--sdk-documentation-layout article.page a:hover {
 
 .page__content dd {
     font-size: 1rem;
-    color: $text-color;
+    color: var(--text-color);
 
     margin-bottom: 20px;
 }
@@ -464,7 +464,7 @@ table {
 
 thead {
     background-color: transparent;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid var(--table-thick-line-color);
 }
 th:empty {
     display: none;
@@ -480,7 +480,7 @@ tr code {
 }
 
 td {
-    border-bottom-color: #ddd;
+    border-bottom-color: var(--table-thin-line-color);
 }
 
 // td:last-of-type() {
@@ -520,7 +520,7 @@ ul.index {
 
 .index li a:hover,
 .index li a:active {
-    color: $primary-color;
+    color: var(--primary-color);
 }
 /* Categories */
 .index h3 {
@@ -574,7 +574,7 @@ svg.highlighting-mark {
     top: -1.5em;
     left: -1.5em;
     height: calc(100% + 3em);
-    color: hsla(49, 100%, 63%, 0.56); // hsla(58, 100%, 50%, 0.56);
+    color: var(--highlight-color);
     z-index: -1;
 
     width: 0;
@@ -659,7 +659,7 @@ svg.highlighting-mark {
 
 // Used for "Implemented by:", "Extends:", etc...
 .class-label {
-    color: $text-color;
+    color: var(--text-color);
     font-weight: 700;
     margin-right: 0.25em;
 }
